# JaxDiffPowerFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
cases/: __init__.py  three_bus_poc.json  three_bus_poc.py
docs/: CHANGELOG.md  aktueller_softwarestand.md  architektur.md  datenfluss_visualisierung.md  io_pipeline.md  ki_softwareueberblick.txt  pandapower_example_simple_preparation.md  pandapower_io_pipeline.md  software_status.txt
experiments/: check_pv_coupling_baseline.py  exp01_diagnose_pandapower_pi_reference.py  exp01_diagnose_residual_voltage_offset.py  exp01_transformer_magnetization_ablation.py  exp01_validate_example_simple.py  exp01_validate_pandapower.py  exp02_validate_gradients.py  exp02_validate_gradients_example_simple.py  exp03_cross_domain_pv_weather.py  exp04_modular_upstream_nn_surrogate.py  exp05a_network_screening.py  exp05b_optimize_pv_curtailment.py  exp05c_optimize_pv_curtailment_nn.py  exp05d_optimize_pv_curtailment_simple_objective.py  plot_exp01_validation_figures.py  plot_exp02_gradient_figures.py  plot_exp03_figures.py  plot_exp04_training_figures.py  plot_exp05_figures.py  plot_exp05c_figures.py  plot_exp05d_figures.py
tests/: conftest.py  test_compile.py  test_exp01_example_simple_outputs.py  test_exp01_pandapower_pi_reference_diagnostic.py  test_exp01_plot_outputs.py  test_exp01_residual_voltage_offset_diagnostic.py  test_exp01_transformer_magnetization_ablation.py  test_exp02_example_simple_gradients_outputs.py  test_exp02_plot_outputs.py  test_exp03_plot_outputs.py  (+28 more)
(+48 files in other folders)
